--- a/styles.css
+++ b/styles.css
@@ -144,12 +144,12 @@ img{
 }
 
 @media (hover: none){
-    .card:hover{
+    card:hover{
     transform: none;
     z-index: 1;
 
 }
-    .cardclicked:hover{
+    cardclicked:hover{
         transform: none;
         z-index: 1;
 }
