--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ img{
 
 }
 
-.card.playdiv {display: 'none' !important;}
+.playdiv {display: 'none' !important;}
 
 .card:hover .playdiv{display: 'block' !important;}
     
