--- a/styles.css
+++ b/styles.css
@@ -143,15 +143,10 @@ img{
 
 }
 
+.card.playdiv {display: 'none' !important}
 
+.card:hover .playdiv{display: 'block';}
     
-}
-
-@media (pointer: fine){
-    .playdiv {display: 'none' !important;}
-
-    .card:hover .playdiv{display: 'block' !important;}
-
 }
 
 
