--- a/styles.css
+++ b/styles.css
@@ -143,10 +143,12 @@ img{
 
 }
 
+.card.playdiv {display: none;}
+
+.card:hover .playdiv{display: block !important;}
     
 }
 
-.card:hover .playdiv{display: 'block';}
 
 
 .playdiv:hover{
